# marshal

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.agents/plugins/: marketplace.json
codex-plugin/: README.md  marketplace.json
codex-plugin/.agents/plugins/: marketplace.json
codex-plugin/plugin/.codex-plugin/: plugin.json
codex-plugin/plugin/hooks/: stop-marshal-continuation.json  subagent-stop-marshal-continuation.json  user-prompt-submit-marshal-status.json
src/marshal_cli/: __init__.py  __main__.py  assignment_models.py  cli.py  conversation.py  conversation_cli.py  conversation_models.py  delegate.py  dispatch.py  dispatch_cli.py  event_models.py  evidence.py  handover.py  hook_cli.py  hook_core.py  init_cli.py  inspect_cli.py  jsonio.py  ledger.py  ledger_cli.py  ledger_core.py  lifecycle.py  lifecycle_cli.py  lifecycle_models.py  model_types.py  models.py  operate_cli.py  overview.py  overview_cli.py  overview_models.py  paths.py  platoon.py  squad_ledger.py  squad_state.py  start_gate.py  start_gate_cli.py  start_gate_core.py  state_models.py
tests/: __init__.py  marshal_support.py  test_cli_workflow.py  test_conversation.py  test_delegate.py  test_hook.py  test_ledger.py  test_lifecycle.py  test_models.py  test_operate.py  test_paths_jsonio.py  test_platoon_assignment.py  test_project_contract.py  test_squad_state.py  test_start_gate.py
