[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marshal"
version = "0.1.0"
description = "Standalone platoon and squad orchestration CLI prototype."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
marshal = "marshal_cli.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_cli"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",
    "D",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
